--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@types/next-auth": "^3.15.0",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.9.2",
