ICA016: added preinstall script for monaco legacy peer deps. hoping to fix vercel deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm install @monaco-editor/react --legacy-peer-deps && npm run build",
     "start": "next start",
     "lint": "next lint",
     "preinstall": "npm install @monaco-editor/react --legacy-peer-deps"
