--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.4",
+    "@emotion/react": "^11.14.0",
     "@monaco-editor/react": "^4.6.0",
     "@types/next-auth": "^3.15.0",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.9.2",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.4.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
